Modified ChangeLog. Add Mat as the macintosh info maintainer. Fixed broken
Modified ChangeLog.
Add Mat as the macintosh info maintainer.
Fixed broken link to The GIMP v0.54
Removed things that did not have content.
Changed the descriptions of the OS2 screenshots. Add two screenshots from the MacOS stuff.
Changed the bugzilla link to be /bugs/howtos/bugzilla.htrw. Add Mat Caughron to the list of people.
"Bugs" now using /bugs/
"Bugs" now using /bugs/. Changed "GIMP for Macintosh" to be linked to /macintosh/.
Changed the screenshots description.
Removed the link to Bugzilla. It is not Unix specific and is at the moment included in /bugs/.
Is now a section with links and other useful things. This also contains the howtos for bug reporting etc.
Add this from the /bugzilla.htrw source.
Template add.
Wrote this as a quick guide.
Add theese for the bugzilla howtos.
With the help from Mat we got 2 screenshots that we can use.
Removed files.

--- a/includes/wgo-menu.xhtml
+++ b/includes/wgo-menu.xhtml
@@ -5,7 +5,7 @@
       <a href="/registry.html">Plug-In Registry</a>
       <a href="/docs/">Documentation</a>
       <a href="/tutorials/">Tutorials</a>
-      <a href="/bugs.html">Bugs</a>
+      <a href="/bugs/">Bugs</a>
       <a href="/develop/">Development</a>
       <br />
       <a href="/unix/">GIMP for Unix</a>
