--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -12,12 +12,12 @@
           <a href="http://registry.gimp.org">Plug-In Registry</a><br/>
           <a href="/docs/">Documentation</a><br/>
           <a href="/tutorials/">Tutorials</a><br/>
-          <a href="/bugzilla.html">Bugs</a><br/>
+          <a href="/bugs/">Bugs</a><br/>
           <a href="/develop/">Development</a><br/>
           <br/>
           <a href="/unix/">GIMP for Unix</a><br/>
           <a href="/windows/">GIMP for Windows</a><br/>
-          <a href="/unix/">GIMP for Macintosh</a><br/>
+          <a href="/macintosh/">GIMP for Macintosh</a><br/>
           <a href="/os2/">GIMP for OS/2</a><br/>
           <br/>
           <br/>
