Modified ChangeLog. Changed the "GIMP for Macintosh" to "GIMP for MacOSX"
Modified ChangeLog.
Changed the "GIMP for Macintosh" to "GIMP for MacOSX" as Mat suggested.
Add this file with the information provided by Mat Caughron <mat@macgimp.org> that is the maintainer of the Mac information.
Add this image for index.htrw.
Removed this file.

--- a/includes/wgo-menu.xhtml
+++ b/includes/wgo-menu.xhtml
@@ -10,7 +10,7 @@
       <br />
       <a href="/unix/">GIMP for Unix</a>
       <a href="/windows/">GIMP for Windows</a>
-      <a href="/macintosh/">GIMP for Macintosh</a>
+      <a href="/macintosh/">GIMP for MacOSX</a>
       <a href="/os2/">GIMP for OS/2</a>
       <br />
       Newest Plug-Ins:
