--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -17,7 +17,7 @@
           <br/>
           <a href="/unix/">GIMP for Unix</a><br/>
           <a href="/windows/">GIMP for Windows</a><br/>
-          <a href="/macintosh/">GIMP for Macintosh</a><br/>
+          <a href="/macintosh/">GIMP for MacOSX</a><br/>
           <a href="/os2/">GIMP for OS/2</a><br/>
           <br/>
           <br/>
