--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -1,25 +1,30 @@
 <!-- $Id$ -->
 </head>
 <body>
-<div id="titlebar"><a href="http://www.gimp.org"><img id="titlebarleft" src="/images/thegimp.png" alt=""/></a><img id="titlebarright" src="/images/wilberright.png" alt=""/></div>
+<div id="titlebar"><a href="http://www.gimp.org"><img id="titlebarleft" src="/images/thegimp.png" alt=""/><img id="titlebarright" src="/images/wilberright.png" alt=""/></a></div>
     <table id="layout">
       <tr>
         <td id="menu">
-          <a href="/index.html">News</a><br/>
-          <a href="/about/">About GIMP</a><br/>
-          <a href="/resources/">Resources</a><br/>
-	  <a href="/downloads/">Downloads</a><br/>
-          <a href="http://registry.gimp.org">Plug-In Registry</a><br/>
-          <a href="/docs/">Documentation</a><br/>
-          <a href="/tutorials/">Tutorials</a><br/>
+          <a href="/index.html">News</a><br />
+          <a href="/about/">About GIMP</a><br />
+          <a href="/books/">Books</a><br />
+	  <a href="/screenshots/">Screenshots</a><br />
+          <a href="/resources/">Resources</a><br />
+	  <a href="/downloads/">Downloads</a><br />
+          <a href="/docs/">Documentation</a><br /> 
+          <a href="/tutorials/">Tutorials</a><br />
+	  <a href="/mail_lists.html">Mailing Lists</a><br />
           <a href="/bugs/">Bugs</a><br/>
-          <a href="/develop/">Development</a><br/>
-          <br/>
-          <a href="/unix/">GIMP for Unix</a><br/>
-          <a href="/windows/">GIMP for Windows</a><br/>
-          <a href="/macintosh/">GIMP for MacOSX</a><br/>
-          <a href="/os2/">GIMP for OS/2</a><br/>
-          <br/>
-          <br/>
+          <a href="/develop/">Development</a><br />
+	  <a href="/links/index.html">GIMP Links</a><br />
+          <br />
+          <a href="/unix/">GIMP for Unix</a><br />
+          <a href="/windows/">GIMP for Windows</a><br />
+          <a href="/macintosh/">GIMP for MacOSX</a><br />
+          <a href="/os2/">GIMP for OS/2</a><br />
+          <br />
+	  <a href="/contest/index.html">Contest</a>
+	  <br />
+	  <br />
         </td>
         <td id="main">
