Modified ChangeLog. Looked through this file and formated the text a bit.
Modified ChangeLog.
Looked through this file and formated the text a bit. Change <A HREF=""></A> to <a href=""></a> that is used for XHTML.
Changed color values for em.caution, em.warn and em.hellbrokeloose to make them more clear on website. Also add bold to make them even more clear. This closes bug: #119479

--- a/style/default.css
+++ b/style/default.css
@@ -201,15 +201,18 @@ pre.text {
 }
 
 em.caution {
-  color: yellow;
+  color: #981e49;
+  font-weight: bold;
 }
 
 em.warn {
-  color: orange;
+  color: #d5a82f;
+  font-weight: bold;
 }
 
 em.hellbrokeloose {
-  color: red;
+  color: #c74646;
+  font-weight: bold;
 }
 
 kbd {
