--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -7,16 +7,16 @@
         <td id="menu">
           <a href="/index.html">News</a><br />
           <a href="/about/">About GIMP</a><br />
-          <a href="/books/">Books</a><br />
 	  <a href="/screenshots/">Screenshots</a><br />
           <a href="/resources/">Resources</a><br />
 	  <a href="/downloads/">Downloads</a><br />
           <a href="/docs/">Documentation</a><br /> 
+          <a href="/books/">Books</a><br />
           <a href="/tutorials/">Tutorials</a><br />
 	  <a href="/mail_lists.html">Mailing Lists</a><br />
           <a href="/bugs/">Bugs</a><br/>
           <a href="/develop/">Development</a><br />
-	  <a href="/links/index.html">GIMP Links</a><br />
+	  <a href="/links/index.html">Links</a><br />
           <br />
           <a href="/unix/">GIMP for Unix</a><br />
           <a href="/windows/">GIMP for Windows</a><br />
