--- a/includes/wgo-admin-init.xhtml
+++ b/includes/wgo-admin-init.xhtml
@@ -1,7 +1,7 @@
 <!-- $Id$ -->
 </head>
 <body>
-<div id="titlebar"><a href="http://www.gimp.org"><img id="titlebarleft" src="/images/thegimp.png" alt=""/></a><img id="titlebarright" src="/images/wilberright.png" alt=""/></div>
+<div id="titlebar"><a href="http://www.gimp.org"><img id="titlebarleft" src="/images/thegimp.png" alt=""/></a><img id="titlebarright" src="/images/wilberright.jpeg" alt=""/></div>
     <table id="layout">
       <tr>
         <td id="menu">
