includes/header_posttitle.inc includes/wgo-admin-init.xhtml
2003-08-25  Raphael Quinet  <quinet@gamers.org>

	* includes/header_posttitle.inc
	* includes/wgo-admin-init.xhtml
	* includes/wgo-develop-init.xhtml
	* includes/wgo-howto-bugs-init.xhtml
	* includes/wgo-howto-unix-init.xhtml
	* includes/wgo-page-init.xhtml
	* includes/wgo-tutorial-init.xhtml: Added a slightly more
	descriptive alt attribute "[The GIMP]" for the image "thegimp.png"
	in order to fix at least a part of bug #117380.

--- a/includes/wgo-admin-init.xhtml
+++ b/includes/wgo-admin-init.xhtml
@@ -1,7 +1,7 @@
 <!-- $Id$ -->
 </head>
 <body>
-<div id="titlebar"><a href="http://www.gimp.org"><img id="titlebarleft" src="/images/thegimp.png" alt=""/></a><img id="titlebarright" src="/images/wilberright.jpeg" alt=""/></div>
+<div id="titlebar"><a href="http://www.gimp.org"><img id="titlebarleft" src="/images/thegimp.png" alt="[The GIMP]"/></a><img id="titlebarright" src="/images/wilberright.jpeg" alt=""/></div>
     <table id="layout">
       <tr>
         <td id="menu">
