--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -1,7 +1,7 @@
 <!-- $Id$ -->
 </head>
 <body>
-<div id="titlebar"><a href="http://www.gimp.org"><img id="titlebarleft" src="/images/thegimp.png" alt=""/><img id="titlebarright" src="/images/wilberright.jpeg" alt=""/></a></div>
+<div id="titlebar"><a href="http://www.gimp.org"><img id="titlebarleft" src="/images/thegimp.png" alt="[The GIMP]"/><img id="titlebarright" src="/images/wilberright.jpeg" alt=""/></a></div>
     <table id="layout">
       <tr>
         <td id="menu">
