--- a/includes/wgo-admin-fini.xhtml
+++ b/includes/wgo-admin-fini.xhtml
@@ -9,9 +9,9 @@
     </div>
     <div>
       <span id="footerleft">
-        &copy; 2001-2002 <a href="/team.html">The GIMP Team</a>
+        &copy; 2001-2003 <a href="/team.html">The GIMP Team</a>
       </span>
       <span id="footerright">
-        <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
+        <a href="wgo:webmasters">Contacting Us</a>
       </span>
-    </div>
+     </div>
