includes/wgo-admin-fini.xhtml, Darn! The substitutions do not work in
2003-08-29  Raphael Quinet  <quinet@gamers.org>

	* includes/wgo-admin-fini.xhtml,
	* includes/wgo-page-fini.xhtml: Darn!  The substitutions do not
	work in these included files.  Replaced wgo:webmasters by the path
	to /webmasters.html.

	* source/howtos/cvsrc: Slightly improved version of the default
	cvsrc.

	* source/howtos/gimpenv,
	* source/howtos/stable-cvs-build.htrw,
	* source/howtos/stable-cvs-get.htrw,
	* unix/howtos/cvsrc,
	* unix/howtos/gimpenv,
	* unix/howtos/stable-cvs-build.htrw,
	* unix/howtos/stable-cvs-get.htrw: Moved from /unix to /source in
	order to fix bug #119246.  We still need an index page for that
	section before being able to close that bug report.

	* unix/howtos/HACKING: Removed.  It should be replaced by a
	symbolic link to a checked-out CVS gimp tree.  I will deal with
	that later, so the link will be broken for the moment.

--- a/includes/wgo-admin-fini.xhtml
+++ b/includes/wgo-admin-fini.xhtml
@@ -12,6 +12,6 @@
         &copy; 2001-2003 <a href="/team.html">The GIMP Team</a>
       </span>
       <span id="footerright">
-        <a href="wgo:webmasters">Contacting Us</a>
+        <a href="/webmasters.html">Contacting Us</a>
       </span>
      </div>
