--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -14,6 +14,6 @@
         &copy; 2001-2003 <a href="/team.html">The GIMP Team</a>
       </span>
       <span id="footerright">
-        <a href="wgo:webmasters">Contacting Us</a>
+        <a href="/webmasters.html">Contacting Us</a>
       </span>
     </div>
