--- a/includes/wgo-styles.xhtml
+++ b/includes/wgo-styles.xhtml
@@ -1,5 +1,4 @@
 <!-- $Id$ -->
 <!-- element style information -->
-<link rel="stylesheet" type="text/css" href="/style/default.css" />
-<link rel="stylesheet" type="text/css" href="/style/extended.css" />
-<link rel="icon" href="/images/wilber16.png" type="image/png"/>
+<link rel="stylesheet" href="/style/wgo.css" type="text/css" />
+<link rel="icon" href="/images/wilber16.png" type="image/png" />
