--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -1,6 +1,6 @@
 <!-- $Id$ -->
 </div>
-
+<script language="Javascript" type="text/javascript" src="/style/wgo.js"></script>
 <div id="linkbar">
   <a href="http://registry.gimp.org">Plug-In Registry</a> |
   <a href="http://developer.gimp.org">GIMP Development</a> |
