includes/wgo-page-init.xhtml includes/wgo-page-fini.xhtml Try to make it
2003-09-01  Raphael Quinet  <quinet@gamers.org>

	* includes/wgo-page-init.xhtml
	* includes/wgo-page-fini.xhtml
	* style/wgo.js: Try to make it work correctly, this time...  This
	requires the JavaScript code to be split in two parts: one before
	the contents, and the second part at the end of the page.

--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -1,6 +1,8 @@
 <!-- $Id$ -->
 </div>
-<script language="Javascript" type="text/javascript" src="/style/wgo.js"></script>
+<script language="Javascript" type="text/javascript"><!--
+wgo_init();
+//--></script>
 <div id="linkbar">
   <a href="http://registry.gimp.org">Plug-In Registry</a> |
   <a href="http://developer.gimp.org">GIMP Development</a> |
