--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -31,4 +31,5 @@
   <a href="/links/">Links</a>
   <span>]</span>
 </div>
+<script language="Javascript" type="text/javascript" src="/style/wgo.js"></script>
 <div id="main">
