Hide the stylesheet from Netscape4. The pages look better that way.
2003-09-01  Raphael Quinet  <quinet@gamers.org>

	* includes/wgo-styles.xhtml: Hide the stylesheet from Netscape4.
	The pages look better that way.

	* style/wgo.js: Fixed a typo.

--- a/includes/wgo-styles.xhtml
+++ b/includes/wgo-styles.xhtml
@@ -1,4 +1,5 @@
 <!-- $Id$ -->
-<!-- element style information -->
-<link rel="stylesheet" href="/style/wgo.css" type="text/css" />
+<style type="text/css"><!--
+@import url("/style/wgo.css");
+//--></style>
 <link rel="icon" href="/images/wilber16.png" type="image/png" />
