includes/wgo-admin-init.xhtml Updated for new layout
* includes/wgo-admin-init.xhtml
* includes/wgo-admin-fini.xhtml: Updated for new layout

* Makefile (%.html): remove the intermediate file in processing
  the attributes and SSI.

--- a/includes/wgo-admin-fini.xhtml
+++ b/includes/wgo-admin-fini.xhtml
@@ -1,17 +1,19 @@
 <!-- $Id$ -->
-        </td>        
-      </tr>
-    </table>
-
-    <div id="linkbar">
-      <a href="/admin/todo.xhtml">Web Site TODO</a> |
-      <a href="/admin/documentation">Web Site Developer Documentation</a> | 
-    </div>
-    <div>
-      <span id="footerleft">
-        &copy; 2001-2003 <a href="/team.html">The GIMP Team</a>
-      </span>
-      <span id="footerright">
-        <a href="/webmasters.html">Contacting Us</a>
-      </span>
-     </div>
+</div>
+<script language="Javascript" type="text/javascript"><!--
+wgo_init();
+//--></script>
+<div id="linkbar">
+  <a href="http://registry.gimp.org">Plug-In Registry</a> |
+  <a href="http://developer.gimp.org">GIMP Development</a> |
+  <a href="http://gug.sunsite.dk">GIMP User Group</a> | 
+  <a href="http://gimp-savvy.com/BOOK/index.html">Grokking the GIMP</a>
+</div>
+<div>
+  <span id="footerleft">
+    &copy; 2001-2003 <a href="/team.html">The GIMP Team</a>
+  </span>
+  <span id="footerright">
+    <a href="/webmasters.html">Contacting Us</a>
+  </span>
+</div>
