--- a/includes/wgo-admin-init.xhtml
+++ b/includes/wgo-admin-init.xhtml
@@ -1,27 +1,30 @@
 <!-- $Id$ -->
 </head>
 <body>
-<div id="titlebar"><a href="http://www.gimp.org"><img id="titlebarleft" src="/images/thegimp.png" alt="[The GIMP]"/></a><img id="titlebarright" src="/images/wilberright.jpeg" alt=""/></div>
-    <table id="layout">
-      <tr>
-        <td id="menu">
-          <div>www.gimp.org</div>
-            <a style="padding-left: 0.5em" href="/index.html">Home</a><br />
+<table id="titlebar" width="100%" bgcolor="#31527c" cellpadding="0" cellspacing="0" border="0" summary="The GIMP"><tbody><tr>
+<td align="left"><a href="http://www.gimp.org/"><img id="titlebarleft" src="/images/thegimp.png" alt="[The GIMP]" border="0" /></a></td>
+<td width="99%"><br /></td>
+<td align="right"><a href="http://www.gimp.org/"><img id="titlebarright" src="/images/wilberright.jpeg" alt="" border="0" /></a></td>
+</tr></tbody></table>
+<div id="menu">
+  <p><a href="#main">Skip to page contents</a></p>
+  <span>[</span>
+  <a href="/index.html">Home</a><span> | </span>
 
-          <div style="padding-top: 0.5em;">Administration</div>
-            <a style="padding-left: 0.5em" href="/admin/index.html">Main</a><br />
-            <a style="padding-left: 0.5em" href="/admin/howto.html"> HOWTO</a><br />
+  <a style="padding: 0.5em 0 0 0;" href="/admin/index.html">Administration</a><span> | </span>
+  <a href="/admin/howto.html" class="sub"> HOWTO</a><span> | </span>
 
-          <div style="padding-top: 0.5em;">News</div>
-            <a style="padding-left: 0.5em" href="/admin/news/news-index.cgi?news-pending">Pending News</a><br />
-            <a style="padding-left: 0.5em" href="/admin/news/news-index.cgi?news-current">Current News</a><br />
-            <a style="padding-left: 0.5em" href="/admin/news/news-index.cgi?news-archive">Archived News</a><br />
-            <a style="padding-left: 0.5em" href="/admin/news/howto-news.html">HOWTO</a><br />
+  <a style="padding: 0.5em 0 0 0;" href="/admin/news/howto-news.html">News</a><span> | </span>
+  <a href="/admin/news/news-index.cgi?news-pending" class="sub">Pending News</a><span> | </span>
+  <a href="/admin/news/news-index.cgi?news-current" class="sub">Current News</a><span> | </span>
+  <a href="/admin/news/news-index.cgi?news-archive" class="sub">Archived News</a><span> | </span>
 
-          <div style="padding-top: 0.5em;">Splash Contest</div>
-            <a style="padding-left: 0.5em" href="/admin/contest/gallery-edit.cgi">Edit Gallery</a><br />
+  <a style="padding: 0.5em 0 0 0;" href="/contest/">Splash Contest</a><span> | </span>
+  <a href="/admin/contest/gallery-edit.cgi" class="sub">Edit Gallery</a><span> | </span>
 
-          <div style="padding-top: 0.5em;">Developer</div>
-            <a style="padding-left: 0.5em" href="/admin/develop/changelogs.cgi">ChangeLogs</a><br />
-        </td>
-     <td id="main">
+  <a style="padding: 0.5em 0 0 0;" href="/admin/develop/">Developer</a><span> | </span>
+  <a href="/admin/develop/changelogs.cgi" class="sub">ChangeLogs</a><span> | </span>
+  <span>]</span>
+</div>
+<script language="Javascript" type="text/javascript" src="/style/wgo.js"></script>
+<div id="main">
