--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -1,7 +1,7 @@
 <!-- $Id$ -->
 </div>
 <script language="Javascript" type="text/javascript"><!--
-wgo_init();
+wgo_init(true);
 //--></script>
 <div id="linkbar">
   <a href="http://registry.gimp.org">Plug-In Registry</a> |
