--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -1,6 +1,6 @@
 <!-- $Id$ -->
 </head>
-<body>
+<body onLoad="menu_adjust();">
 <table id="titlebar" width="100%" bgcolor="#31527c" cellpadding="0" cellspacing="0" border="0" summary="The GIMP"><tbody><tr>
 <td align="left"><a href="http://www.gimp.org/"><img id="titlebarleft" src="/images/thegimp.png" alt="[The GIMP]" border="0" /></a></td>
 <td width="99%"><br /></td>
