includes/wgo-tutorial-init.xhtml includes/wgo-tutorial-fini.xhtml
2003-09-19  Raphael Quinet  <quinet@gamers.org>

	* includes/wgo-tutorial-init.xhtml
	* includes/wgo-tutorial-fini.xhtml
	* includes/wgo-page-init.xhtml
	* includes/wgo-page-fini.xhtml: Use a table instead of a div + CSS
	for the menu and main contents of the pages.  This is basically
	restoring the table that was used before I replaced it with CSS on
	2003-08-31.  This removes the ability to toggle the menu on and
	off (which was useful for the tutorials), but this fixes the
	various bugs that were reported for several browsers.
	Unfortunately, this also means that the text-only browsers such as
	w3m will have navigation problems again, because of the tables.
	Other browsers such as Netscape 4.x are affected as well.

	* programmatic/tools/rewrite_attrs.py (xhtml_parser.handle_pi):
	Added a new method for correctly printing the processing
	instruction at the top of each file.  The <?xml version...?> line
	was missing from all processed files.

	* Makefile (%.html): Re-enabled the combined SSI processing and
	attribute rewriting.  Added a small hack (temporary) for
	mirrors.xhtml.  A better solution should be found later.

	* admin/gimp-web-urls: Added NOSPAM to most e-mail addresses.
	Note that many pages contain some addresses as part of the text of
	the page (especially the footers of the tutorials) and the spam
	harvesters are known to grab these as well, so they should be
	removed or changed as soon as possible.

--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -1,12 +1,12 @@
 <!-- $Id$ -->
 </head>
-<body onload="menu_adjust();">
+<body>
 <table id="titlebar" width="100%" bgcolor="#31527c" cellpadding="0" cellspacing="0" border="0" summary="The GIMP"><tbody><tr>
 <td align="left"><a href="http://www.gimp.org/"><img id="titlebarleft" src="/images/thegimp.png" alt="[The GIMP]" border="0" /></a></td>
 <td width="99%"><br /></td>
 <td align="right"><a href="http://www.gimp.org/"><img id="titlebarright" src="/images/wilberright.jpeg" alt="" border="0" /></a></td>
-</tr></tbody></table>
-<div id="menu">
+</tr></tbody></table><table width="100%" cellpadding="0" cellspacing="0" border="0" summary=""><tbody><tr>
+<td id="menu">
   <p><a href="#main">Skip to page contents</a></p>
   <span>[</span>
   <a href="/">News</a><span> | </span>
@@ -30,6 +30,5 @@
   <a href="/contest/">Contest</a><span> | </span>
   <a href="/links/">Links</a>
   <span>]</span>
-</div>
-<script language="Javascript" type="text/javascript" src="/style/wgo.js"></script>
-<div id="main">
+</td>
+<td id="main">
