--- a/includes/wgo-tutorial-fini.xhtml
+++ b/includes/wgo-tutorial-fini.xhtml
@@ -1,8 +1,6 @@
 <!-- $Id$ -->
-</div>
-<script language="Javascript" type="text/javascript"><!--
-wgo_init(false);
-//--></script>
+</td>
+</tr></tbody></table>
 <div id="linkbar"><a href="/tutorials/">Back</a></div>
 <!-- FIXME: temporarily disabled until all tutorials are updated !
 **********
