--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -1,8 +1,6 @@
 <!-- $Id$ -->
-</div>
-<script language="Javascript" type="text/javascript"><!--
-wgo_init(true);
-//--></script>
+</td>
+</tr></tbody></table>
 <div id="linkbar">
   <a href="http://registry.gimp.org">Plug-In Registry</a> |
   <a href="http://developer.gimp.org">GIMP Development</a> |
