--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -5,7 +5,7 @@
 <td align="left"><a href="http://www.gimp.org/"><img id="titlebarleft" src="/images/thegimp.png" alt="[The GIMP]" border="0" /></a></td>
 <td width="99%"><br /></td>
 <td align="right"><a href="http://www.gimp.org/"><img id="titlebarright" src="/images/wilberright.jpeg" alt="" border="0" /></a></td>
-</tr></tbody></table><table width="100%" cellpadding="0" cellspacing="0" border="0" summary=""><tbody><tr>
+</tr></tbody></table><table height="100%" width="100%" cellpadding="0" cellspacing="0" border="0" summary=""><tbody><tr>
 <td id="menu">
   <p><a href="#main">Skip to page contents</a></p>
   <span>[</span>
