Fiddled with width/height tags again. Should be working now.
        * includes/wgo-page-init.xhtml: Fiddled with width/height tags again.
        Should be working now.

--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -5,8 +5,8 @@
 <td align="left"><a href="http://www.gimp.org/"><img id="titlebarleft" src="/images/thegimp.png" alt="[The GIMP]" border="0" /></a></td>
 <td width="99%"><br /></td>
 <td align="right"><a href="http://www.gimp.org/"><img id="titlebarright" src="/images/wilberright.jpeg" alt="" border="0" /></a></td>
-</tr></tbody></table><table height="100%" width="100%" cellpadding="0" cellspacing="0" border="0" summary=""><tbody><tr>
-<td id="menu">
+</tr></tbody></table><table width="100%" cellpadding="0" cellspacing="0" border="0" summary=""><tbody><tr height="100%">
+<td id="menu" height="100%">
   <p><a href="#main">Skip to page contents</a></p>
   <span>[</span>
   <a href="/">News</a><span> | </span>
@@ -31,4 +31,4 @@
   <a href="/links/">Links</a>
   <span>]</span>
 </td>
-<td id="main">
+<td id="main" width="100%">
