--- a/includes/wgo-howto-unix-init.xhtml
+++ b/includes/wgo-howto-unix-init.xhtml
@@ -1,7 +1,34 @@
 <!-- $Id$ -->
 </head>
 <body>
-<div id="titlebar"><a href="http://www.gimp.org"><img id="titlebarleft" src="/images/thegimp.png" alt="[The GIMP]"/></a><img id="titlebarright" src="/images/wilberright.jpeg" alt=""/></div>
-    <table id="layout">
-      <tr>
-        <td id="main">
+<table id="titlebar" width="100%" bgcolor="#31527c" cellpadding="0" cellspacing="0" border="0" summary="The GIMP"><tbody><tr>
+<td align="left"><a href="http://www.gimp.org/"><img id="titlebarleft" src="/images/thegimp.png" alt="[The GIMP]" border="0" /></a></td>
+<td width="99%"><br /></td>
+<td align="right"><a href="http://www.gimp.org/"><img id="titlebarright" src="/images/wilberright.jpeg" alt="" border="0" /></a></td>
+</tr></tbody></table><table width="100%" cellpadding="0" cellspacing="0" border="0" summary=""><tbody><tr>
+<td id="menu">
+  <p><a href="#main">Skip to page contents</a></p>
+  <span>[</span>
+  <a href="/">News</a><span> | </span>
+  <a href="/about/">About The GIMP</a><span> | </span>
+  <a href="/screenshots/">Screenshots</a><span> | </span>
+  <a href="/downloads/">Downloads</a><span> | </span>
+  <a href="/resources/" class="sub">Resources</a><span> | </span>
+  <a href="/docs/">Documentation</a><span> | </span>
+  <a href="/books/" class="sub">Books</a><span> | </span>
+  <a href="/tutorials/" class="sub">Tutorials</a><span> | </span>
+  <a href="/mail_lists.html" class="sub">Mailing Lists</a><span> | </span>
+  <a href="/develop/">Getting Involved</a><span> | </span>
+  <a href="/bugs/" class="sub">Bugs</a>
+  <span>]</span><br /><span>[</span>
+  <a href="/source/">GIMP from Source</a><span> | </span>
+  <a href="/unix/">GIMP for Unix</a><span> | </span>
+  <a href="/windows/">GIMP for Windows</a><span> | </span>
+  <a href="/macintosh/">GIMP for MacOSX</a><span> | </span>
+  <a href="/os2/">GIMP for OS/2</a>
+  <span>]</span><br /><span>[</span>
+  <a href="/contest/">Contest</a><span> | </span>
+  <a href="/links/">Links</a>
+  <span>]</span>
+</td>
+<td id="main">
