--- a/includes/wgo-howto-bugs-fini.xhtml
+++ b/includes/wgo-howto-bugs-fini.xhtml
@@ -1,6 +1,4 @@
 <!-- $Id$ -->
-        </td>        
-      </tr>
-    </table>
-
-    <div id="navbar"><a href="/bugs/">Back</a></div>
+</td>
+</tr></tbody></table>
+<div id="linkbar"><a href="/bugs/">Back</a></div>
