--- a/includes/wgo-xhtml-fini.xhtml
+++ b/includes/wgo-xhtml-fini.xhtml
@@ -1,7 +1,7 @@
 <!-- $Id$ -->
 <div style="clear: both; margin: 0; width: 100%; "></div>
-<div>
+<!-- div>
   <a style="clear: both; font-size: xx-small;" href="http://validator.w3.org/check/referer">Validate XHTML</a>
-</div>
+</div -->
 </body>
 </html>
