unix/index.htrw windows/index.htrw macintosh/index.htrw Re-organized the
2003-09-21  Raphael Quinet  <quinet@gamers.org>

	* unix/index.htrw
	* windows/index.htrw
	* macintosh/index.htrw
	* os2/index.htrw: Re-organized the platform-specific sections so
	that they share a similar structure: "Getting and Installing the
	GIMP", "Requirements", "Configuration", "Help and Documentation".
	This should fix bug #119537, bug #119538 and bug #119539.

	* style/wgo.css (help, acronym): added new style for elements that
	have a title (help tip).

	* develop/index.htrw: Recycled some parts of the Mac section "Your
	support" (now gone) to revise the first part of this page.

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -228,6 +228,11 @@ em.hellbrokeloose {
   font-weight: bold;
 }
 
+.help, acronym {
+  border-bottom: 1px dashed #9999cc;
+  cursor: help;
+}
+
 kbd {
   font-weight: bold;
 }
