Modified ChangeLog. Fixed these files because they broke the layout of the
Modified ChangeLog.
Fixed these files because they broke the layout of the site when going to admin pages. Also add a few extra breaks to make the menu look better.

--- a/includes/wgo-admin-init.xhtml
+++ b/includes/wgo-admin-init.xhtml
@@ -1,30 +1,29 @@
 <!-- $Id$ -->
 </head>
-<body onload="menu_adjust();">
+<body>
 <table id="titlebar" width="100%" bgcolor="#31527c" cellpadding="0" cellspacing="0" border="0" summary="The GIMP"><tbody><tr>
 <td align="left"><a href="http://www.gimp.org/"><img id="titlebarleft" src="/images/thegimp.png" alt="[The GIMP]" border="0" /></a></td>
 <td width="99%"><br /></td>
 <td align="right"><a href="http://www.gimp.org/"><img id="titlebarright" src="/images/wilberright.jpeg" alt="" border="0" /></a></td>
-</tr></tbody></table>
-<div id="menu">
+</tr></tbody></table><table width="100%" cellpadding="0" cellspacing="0" border="0" summary=""><tbody><tr height="100%">
+<td id="menu" height="100%">
   <p><a href="#main">Skip to page contents</a></p>
   <span>[</span>
   <a href="/index.html">Home</a><span> | </span>
-
-  <a style="padding: 0.5em 0 0 0;" href="/admin/index.html">Administration</a><span> | </span>
+  <span>]</span><br /><span>[</span>
+  <a href="/admin/index.html">Administration</a><span> | </span>
   <a href="/admin/howto.html" class="sub"> HOWTO</a><span> | </span>
-
-  <a style="padding: 0.5em 0 0 0;" href="/admin/news/howto-news.html">News</a><span> | </span>
+  <span>]</span><br /><span>[</span>
+  <a href="/admin/news/howto-news.html">News</a><span> | </span>
   <a href="/admin/news/news-index.cgi?news-pending" class="sub">Pending News</a><span> | </span>
   <a href="/admin/news/news-index.cgi?news-current" class="sub">Current News</a><span> | </span>
   <a href="/admin/news/news-index.cgi?news-archive" class="sub">Archived News</a><span> | </span>
-
-  <a style="padding: 0.5em 0 0 0;" href="/contest/">Splash Contest</a><span> | </span>
+  <span>]</span><br /><span>[</span>
+  <a href="/contest/">Splash Contest</a><span> | </span>
   <a href="/admin/contest/gallery-edit.cgi" class="sub">Edit Gallery</a><span> | </span>
-
-  <a style="padding: 0.5em 0 0 0;" href="/admin/develop/">Developer</a><span> | </span>
+  <span>]</span><br /><span>[</span>
+  <a href="/admin/develop/">Developer</a><span> | </span>
   <a href="/admin/develop/changelogs.cgi" class="sub">ChangeLogs</a><span> | </span>
   <span>]</span>
-</div>
-<script language="Javascript" type="text/javascript" src="/style/wgo.js"></script>
-<div id="main">
+</td>
+<td id="main" width="100%">
