--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -1,12 +1,19 @@
 <!-- $Id$ -->
 </head>
 <body>
-<table id="titlebar" width="100%" bgcolor="#31527c" cellpadding="0" cellspacing="0" border="0" summary="The GIMP"><tbody><tr>
+<table id="titlebar" width="100%" bgcolor="#31527c" cellpadding="0" cellspacing="0" border="0" summary="The GIMP">
+<tbody>
+<tr valign="top">
 <td align="left"><a href="http://www.gimp.org/"><img id="titlebarleft" src="/images/thegimp.png" alt="[The GIMP]" border="0" /></a></td>
 <td width="99%"><br /></td>
 <td align="right"><a href="http://www.gimp.org/"><img id="titlebarright" src="/images/wilberright.jpeg" alt="" border="0" /></a></td>
-</tr></tbody></table><table width="100%" cellpadding="0" cellspacing="0" border="0" summary=""><tbody><tr height="100%">
-<td id="menu" height="100%">
+</tr>
+</tbody>
+</table>
+<table width="100%" cellpadding="0" cellspacing="0" border="0" summary="">
+<tbody>
+<tr height="100%">
+<td valign="top" id="menu" style="height: 100%;">
   <p><a href="#main">Skip to page contents</a></p>
   <span>[</span>
   <a href="/">News</a><span> | </span>
