--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -12,8 +12,8 @@
 </table>
 <table width="100%" cellpadding="0" cellspacing="0" border="0" summary="">
 <tbody>
-<tr height="100%">
-<td valign="top" id="menu" style="height: 100%;">
+<tr valign="top" style="height: 100%;">
+<td id="menu" height="100%">
   <p><a href="#main">Skip to page contents</a></p>
   <span>[</span>
   <a href="/">News</a><span> | </span>
