--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -20,6 +20,7 @@
   <a href="/about/">About The GIMP</a><span> | </span>
   <a href="/screenshots/">Screenshots</a><span> | </span>
   <a href="/downloads/">Downloads</a><span> | </span>
+  <a href="/resources/" class="sub">Resources</a><span> | </span>
   <a href="/docs/">Documentation</a><span> | </span> 
   <a href="/books/" class="sub">Books</a><span> | </span>
   <a href="/tutorials/" class="sub">Tutorials</a><span> | </span>
