replaced "clear: top", which is not valid CSS, by "clear: both". The
2003-09-26  Raphael Quinet  <quinet@gamers.org>

	* style/wgo.css (div.news): replaced "clear: top", which is not
	valid CSS, by "clear: both".  The result does not look much better
	and I do not know why this style was created.  See the discussion
	in bug #123123.  See also:
	http://jigsaw.w3.org/css-validator/validator-uri.html

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -86,11 +86,11 @@ p.news {
 }
 
 div.news {
-    clear: top;
+    clear: both;
 }
 
 div.news p {
-    clear: top;
+    clear: both;
 }
 
 div.news img {
