includes/includes/wgo-admin-init.xhtml includes/wgo-develop-init.xhtml
2003-11-24  Raphael Quinet  <quinet@gamers.org>

	* includes/includes/wgo-admin-init.xhtml
	* includes/wgo-develop-init.xhtml
	* includes/wgo-howto-bugs-init.xhtml
	* includes/wgo-howto-source-init.xhtml
	* includes/wgo-howto-unix-init.xhtml
	* includes/wgo-page-init.xhtml
	* includes/wgo-tutorial-init.xhtml: added id="wwwgimporg" to the
	body element in order to help those who would like to override
	some of our styles in their personal style sheet (bug #127811).

--- a/includes/wgo-develop-init.xhtml
+++ b/includes/wgo-develop-init.xhtml
@@ -1,6 +1,6 @@
 <!-- $Id$ -->
 </head>
-<body>
+<body id="wwwgimporg">
 <div id="titlebar"><a href="http://www.gimp.org"><img id="titlebarleft" src="/images/thegimp.png" alt="[The GIMP]"/></a><img id="titlebarright" src="/images/wilberright.jpeg" alt=""/></div>
     <table id="layout">
       <tr>
