--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -1,6 +1,6 @@
 <!-- $Id$ -->
 </head>
-<body>
+<body id="wwwgimporg">
 <table id="titlebar" width="100%" bgcolor="#31527c" cellpadding="0" cellspacing="0" border="0" summary="The GIMP">
 <tbody>
 <tr valign="top">
