Replaced "div.news img" by "p.news img" because the images have been
2004-01-07  Raphaël Quinet  <quinet@gamers.org>

	* style/wgo.css: Replaced "div.news img" by "p.news img" because
	the images have been inside a <p> and not a <div> since a while.

	* includes/news.inc: Added &nbsp; at the end of the headings for
	these sample news items in order to avoid strange display
	artifacts due to the fact that both <span> elements included in
	<h1> have "float" set in the style sheet.

	* includes/wgo-admin-fini.xhtml:
	* includes/wgo-develop-fini.xhtml:
	* includes/wgo-tutorial-fini.xhtml:
	* includes/wgo-page-fini.xhtml: Updated copyright year to 2004.

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -74,6 +74,10 @@ div.book-of-wilber {
   padding: 1em;
 }
 
+div.news {
+    clear: both;
+}
+
 p {
   margin: 1.33em 0px;
   margin-left: 40px;
@@ -85,11 +89,7 @@ p.news {
   text-align: left;
 }
 
-div.news {
-    clear: both;
-}
-
-div.news img {
+p.news img {
     float: left;
     padding: 0em 1em 0em 0em;
 }
