fixed typos in Lite_Quickies which prevented site from building; Remove
2004-03-20  Shawn T. Amundson <amundson@gimp.org>

        * includes/wgo-page-fini.xhtml
          tutorials/Lite_Quickies/jpegrace.htrw: fixed typos in Lite_Quickies
        which prevented site from building; Remove "Grokking the GIMP" link
        from bottom of website, since it is not GIMP 2.0-related and does
        also exist in Books section.

--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -4,8 +4,7 @@
 <div id="linkbar">
   <a href="http://registry.gimp.org">Plug-In Registry</a> |
   <a href="http://developer.gimp.org">GIMP Development</a> |
-  <a href="http://gug.sunsite.dk">GIMP User Group</a> | 
-  <a href="http://gimp-savvy.com/BOOK/index.html">Grokking the GIMP</a>
+  <a href="http://gug.sunsite.dk">GIMP User Group</a>
 </div>
 <div>
   <span id="footerleft">
