--- a/includes/wgo-tutorial-init.xhtml
+++ b/includes/wgo-tutorial-init.xhtml
@@ -11,6 +11,7 @@
   <span>[</span>
   <a href="/">News</a><span> | </span>
   <a href="/about/">About The GIMP</a><span> | </span>
+  <a href="/about/splash/" class="sub">Splash archive</a><span> | </span>
   <a href="/screenshots/">Screenshots</a><span> | </span>
   <a href="/downloads/">Downloads</a><span> | </span>
   <a href="/resources/" class="sub">Resources</a><span> | </span>
