donating/.cvsignore added page with instructions for donating to the GIMP
2004-05-15 Henrik Brix Andersen <brix@gimp.org>

* donating/.cvsignore
* donating/index.htrw: added page with instructions for donating
to the GIMP

* admin/gimp-web-urls: added link to the GUADEC site

* includes/wgo-howto-bugs-init.xhtml
* includes/wgo-howto-source-init.xhtml
* includes/wgo-howto-unix-init.xhtml
* includes/wgo-page-init.xhtml
* includes/wgo-tutorial-init.xhtml: added link to the new
donations page

--- a/includes/wgo-howto-bugs-init.xhtml
+++ b/includes/wgo-howto-bugs-init.xhtml
@@ -20,6 +20,7 @@
   <a href="/tutorials/" class="sub">Tutorials</a><span> | </span>
   <a href="/mail_lists.html" class="sub">Mailing Lists</a><span> | </span>
   <a href="/develop/">Getting Involved</a><span> | </span>
+  <a href="/donating/">Donating</a><span> | </span>
   <a href="/bugs/" class="sub">Bugs</a>
   <span>]</span><br /><span>[</span>
   <a href="/source/">GIMP from Source</a><span> | </span>
@@ -30,4 +31,4 @@
   <a href="/links/">Links</a>
   <span>]</span>
 </td>
-<td id="main">  
+<td id="main">
