--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -22,11 +22,12 @@
   <a href="/screenshots/">Screenshots</a><span> | </span>
   <a href="/downloads/">Downloads</a><span> | </span>
   <a href="/resources/" class="sub">Resources</a><span> | </span>
-  <a href="/docs/">Documentation</a><span> | </span> 
+  <a href="/docs/">Documentation</a><span> | </span>
   <a href="/books/" class="sub">Books</a><span> | </span>
   <a href="/tutorials/" class="sub">Tutorials</a><span> | </span>
   <a href="/mail_lists.html" class="sub">Mailing Lists</a><span> | </span>
   <a href="/develop/">Getting Involved</a><span> | </span>
+  <a href="/donating/">Donating</a><span> | </span>
   <a href="/bugs/" class="sub">Bugs</a>
   <span>]</span><br /><span>[</span>
   <a href="/source/">GIMP from Source</a><span> | </span>
