includes/wgo-tutorial-init.xhtml includes/wgo-page-init.xhtml
2004-05-15 Henrik Brix Andersen <brix@gimp.org>

* includes/wgo-tutorial-init.xhtml
* includes/wgo-page-init.xhtml
* includes/wgo-howto-unix-init.xhtml
* includes/wgo-howto-source-init.xhtml
* includes/wgo-howto-bugs-init.xhtml: forgot to add the
class="sub" stuff to the new link

--- a/includes/wgo-howto-bugs-init.xhtml
+++ b/includes/wgo-howto-bugs-init.xhtml
@@ -20,7 +20,7 @@
   <a href="/tutorials/" class="sub">Tutorials</a><span> | </span>
   <a href="/mail_lists.html" class="sub">Mailing Lists</a><span> | </span>
   <a href="/develop/">Getting Involved</a><span> | </span>
-  <a href="/donating/">Donating</a><span> | </span>
+  <a href="/donating/" class="sub">Donating</a><span> | </span>
   <a href="/bugs/" class="sub">Bugs</a>
   <span>]</span><br /><span>[</span>
   <a href="/source/">GIMP from Source</a><span> | </span>
