--- a/includes/wgo-howto-unix-init.xhtml
+++ b/includes/wgo-howto-unix-init.xhtml
@@ -20,7 +20,7 @@
   <a href="/tutorials/" class="sub">Tutorials</a><span> | </span>
   <a href="/mail_lists.html" class="sub">Mailing Lists</a><span> | </span>
   <a href="/develop/">Getting Involved</a><span> | </span>
-  <a href="/donating/">Donating</a><span> | </span>
+  <a href="/donating/" class="sub">Donating</a><span> | </span>
   <a href="/bugs/" class="sub">Bugs</a>
   <span>]</span><br /><span>[</span>
   <a href="/source/">GIMP from Source</a><span> | </span>
