style/wgo.css argh - putting the form in an image paragraph wont help
2004-05-22 Henrik Brix Andersen <brix@gimp.org>

* style/wgo.css
* donating/index.htrw: argh - putting the form in an image
paragraph wont help much. Added a CSS style to indent the form
correctly instead.

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -227,6 +227,12 @@ td.map {
   padding: 0px;
 }
 
+form {
+  margin: 1.33em 0px;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
 /* Changes here should only be done if you know exactly what you are doing.
  * Changes done here will change the appearence of the whole site and should
  * be left up to the designer of the site to change. Contact the designer for
