--- a/programmatic/admin/news/include/news-archive_footer.html
+++ b/programmatic/admin/news/include/news-archive_footer.html
@@ -1,7 +1,7 @@
 <!-- -*- xml -*- -->
 <tr>
   <td class="control">
-    <a class="faux-button" style="background: #ff8000 none; color: white; font-weight: bold;" href="/var/spool/news-archive/news.rdf">XML</a></td>
+    <a class="faux-button" style="background: #ff8000 none; color: white; font-weight: bold;" href="/var/news-archive/news.rdf">XML</a></td>
   <td class="control"></td>
   <td class="control" style="text-align: right;">
     <input type="submit" name="action" value="delete"  title="Click to delete all selected messages" />
