Added small copyright notice, hoping to reduce the number of blatant
2005-02-09  Raphael Quinet  <raphael@gimp.org>

	* style/wgo.css: Added small copyright notice, hoping to
	reduce the number of blatant copies of the wgo design.

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -1,6 +1,20 @@
 /* Default style sheet for www.gimp.org -- be careful if you edit it. */
 /* $Id$ */
 
+/* Copyright (C) 2002-2005 by The GIMP Web Team - Contributions by:
+ * Ville Pätsi (drc), Henrik Brix Andersen (brix), Carol Spears
+ * (carol), Niklas Mattisson (scizzo), Raphaël Quinet (raphael) and
+ * Branko Collin (branko).
+ *
+ * This style sheet and corresponding site layout are designed to be
+ * used on official GIMP web sites only.  You may copy some parts of
+ * this file into your own style sheet as long as you create your own
+ * design that is significantly different from the one used on GIMP
+ * web sites (layout, colors, etc.) and you give appropriate credit if
+ * you copy more than a few lines from this file (do not claim that
+ * you wrote everything yourself).
+ */
+
 body {
   background: white;
   color: black;
