includes/wgo-howto-bugs-init.xhtml includes/wgo-howto-source-init.xhtml
2005-06-20  Raphael Quinet  <raphael@gimp.org>

	* includes/wgo-howto-bugs-init.xhtml
	* includes/wgo-howto-source-init.xhtml
	* includes/wgo-howto-unix-init.xhtml
	* includes/wgo-page-init.xhtml
	* includes/wgo-tutorial-init.xhtml: Added new "GIMP Stuff" link,
	pointing to the merchandise page.

--- a/includes/wgo-howto-bugs-init.xhtml
+++ b/includes/wgo-howto-bugs-init.xhtml
@@ -28,6 +28,7 @@
   <a href="/windows/">GIMP for Windows</a><span> | </span>
   <a href="/macintosh/">GIMP for MacOSX</a><span> | </span>
   <span>]</span><br /><span>[</span>
+  <a href="/about/merchandise.html">GIMP Stuff</a><span> | </span>
   <a href="/links/">Links</a>
   <span>]</span>
 </td>
