--- a/includes/wgo-howto-source-init.xhtml
+++ b/includes/wgo-howto-source-init.xhtml
@@ -28,6 +28,7 @@
   <a href="/windows/">GIMP for Windows</a><span> | </span>
   <a href="/macintosh/">GIMP for MacOSX</a><span> | </span>
   <span>]</span><br /><span>[</span>
+  <a href="/about/merchandise.html">GIMP Stuff</a><span> | </span>
   <a href="/links/">Links</a>
   <span>]</span>
 </td>
